fix: agregando overflow profile

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -95,6 +95,7 @@
     line-height: 27px;
     text-align: left;
     margin-top: 30px;
+    overflow: hidden;
   }
   .profile__edit-button {
     margin: 4px 0 0 10px;
@@ -104,6 +105,7 @@
     line-height: 17px;
     text-align: center;
     margin-bottom: 36px;
+    overflow: hidden;
   }
   .profile__add-button {
     margin: auto;
